[package]
name = "bacnet"
version = "0.1.0"
authors = ["Pascal Bach <pascal.bach@nextrem.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex ="*"
num-derive = "*"
num-traits = "*"
async-std = "*"
serde_asn1_der = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "*"
tracing-subscriber = "*"
byteorder = "*"
bytes = "*"
bitflags = "*"