[package]
name = "bacnet"
version = "0.1.0"
authors = ["Pascal Bach <pascal.bach@nextrem.ch>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/bachp/bacnet-rs"
description = "A BACnet stack written in Rust."

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
async-std = "1.8"
tracing = "0.1"
tracing-subscriber = "0.2"
byteorder = "1.3"
bytes = "1.0"
picky-asn1-der = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
nom = "6.0"
hex ="0.4"

[dev-dependencies]
hex ="0.4"